# snake_vk

./: CMakeLists.txt  LICENSE
shader/: gui.frag  gui.geom  gui.vert  particle.frag  particle.geom  particle.vert
src/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Components.cpp  Components.h  Device.cpp  Device.h  FrameInfo.h  Imgui.cpp  Imgui.h  Model.cpp  Model.h  Particle.cpp  Particle.h  Pipeline.cpp  Pipeline.h  QuadTree.cpp  QuadTree.h  RayTracingModel.cpp  RayTracingModel.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Utils.h  Window.cpp  Window.h  main.cpp
src/descriptors/: DescriptorHandler.cpp  DescriptorHandler.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorWriter.cpp  DescriptorWriter.h
src/systems/: GuiRenderSystem.cpp  GuiRenderSystem.h  ParticleRenderSystem.cpp  ParticleRenderSystem.h  SnakeGame.cpp  SnakeGame.h
src/textures/: SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h  TextureHandler.cpp  TextureHandler.h  TextureImage.cpp  TextureImage.h
